# phonendo_reader

./: Cargo.toml  README.md
blt/: Cargo.toml
blt/src/: adapter_manager.rs  application_client.rs  application_configuration.rs  application_descriptor.rs  application_handler.rs  application_server.rs  blt_application.rs  gatt_application.rs  lib.rs
blt/src/application_manager/: adapter_manager.rs  application_configuration.rs  application_factory.rs  application_server.rs  gatt_application.rs  mod.rs
blt/src/applications/: adder.rs  application_factory.rs  cts.rs  heart_rate.rs  mod.rs  ping_pong.rs
client/: Cargo.toml
client/src/: main.rs
emulator/: Cargo.toml
nodejs/: .env  README.md  libp2p-node.js  package-lock.json  package.json  reader.js
reader/: Cargo.toml
reader/src/: main.rs
resources/: database.inc
resources/services/: adder.inc  cts.inc  heart_rate.inc  ping_pong.inc
server/: Cargo.toml
server/src/: main.rs  ping_pong_application.rs  server_manager.rs
